fix door-slide on safari

--- a/src/assets/scss/_protected-portfolio.scss
+++ b/src/assets/scss/_protected-portfolio.scss
@@ -80,6 +80,7 @@
   height: 96px;
   overflow: hidden;
   position: relative;
+  -webkit-mask-image: -webkit-radial-gradient(white, black);
 
   @media (min-width: $mnbp) {
     height: 180px;
